# ompl-ros-connector

./: CMakeLists.txt  LICENCE  README.md  ompl_prm_planner_plugin.xml  package.xml
cfg/: PlannerParams.cfg
include/ompl_ros_connector/: ompl_prm_planner.h
src/: ompl_prm_planner.cpp
