<?xml version="1.0"?>
<package format="2">
  <name>ompl_ros_connector</name>
  <version>0.0.0</version>
  <description>The ompl_ros_connector package</description>

  <maintainer email="saslab@todo.todo">saslab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>costmap_2d</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>ompl</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>
    <nav_core plugin="${prefix}/ompl_prm_planner_plugin.xml" />
  </export>

</package>
